# uiCA

./: .gitignore  .pre-commit-config.yaml  3524059.3532396 - uiCA Accurate Throughput Prediction of Basic Blocks on Recent Intel Microarchitectures.md  AGENTS.md  Cargo.toml  README.md  README.rust.md  git-purge.sh  pyproject.toml  setup.cmd  setup.sh  traceTemplate.html  uiCA.py
.github/workflows/: pages.yml  rust-parity.yml  verification-curated.yml  verification-quick.yml
docs/: verification-pipeline.md
docs/plans/: 2026-04-21-rust-port-verification-suite-design.md  2026-04-21-rust-port-verification-suite-implementation.md
rust/uica-cli/: Cargo.toml
rust/uica-cli/src/: main.rs
rust/uica-cli/tests/: cli_json_contract.rs
rust/uica-core/: Cargo.toml
rust/uica-core/src/: analytical.rs  engine.rs  instruction_data.rs  lib.rs  matcher.rs  micro_arch.rs  report.rs  x64.rs
rust/uica-core/src/sim/: cache_blocks.rs  decoder.rs  dsb.rs  frontend.rs  mod.rs  ms.rs  predecoder.rs  renamer.rs  reorder_buffer.rs  scheduler.rs  trace.rs  types.rs  uop_expand.rs  uop_storage.rs
rust/uica-core/tests/: decoded_ir_engine.rs  engine_summary.rs  manifest_runtime.rs  matcher_and_analytical.rs  uipack_runtime_engine.rs  x64_and_arch.rs
rust/uica-data/: Cargo.toml
rust/uica-data-gen/: Cargo.toml
rust/uica-decode-ir/: Cargo.toml
rust/uica-decoder/: Cargo.toml
rust/uica-emscripten/: Cargo.toml
rust/uica-emscripten/src/: lib.rs  main.rs
rust/uica-emscripten/tests/: run_contract.rs
rust/uica-model/: Cargo.toml
rust/uica-wasm/: Cargo.toml
rust/uica-wasm/src/: lib.rs
rust/uica-wasm/tests/: node_smoke.rs
rust/uica-xed/: Cargo.toml
rust/uica-xed-sys/: Cargo.toml  build.rs
scripts/: build-nasm-emscripten.sh  build-uica-emscripten.sh  build-web.sh  build-xed-emscripten.sh  rust-parity-local.sh  smoke-emscripten-exports.sh  smoke-nasm-emscripten.sh
tests/: test_bhive_import.py  web-deep-link.test.mjs
tests/fixtures/: README.md
tests/verification/: __init__.py  helpers.py  test_canonicalize.py  test_capture_cli.py  test_capture_tool.py  test_case_manifest.py  test_ci_contract.py  test_compare_html_reports.py  test_html_report_parity.py  test_perf_runs.py  test_profiles.py  test_rust_ci_contract.py  test_rust_engine_adapter.py  test_smoke_harness.py  test_summary_parity.py  test_uica_json_contract.py  test_verify_cli.py  test_verify_execute.py  test_verify_tool.py
verification/: README.md
verification/profiles/: bhive_1k.toml  bhive_hsw_1k.toml  bhive_ivb_1k.toml  bhive_skl_1k.toml  bhive_smoke.toml  curated12.toml  curated24.toml  curated48.toml  quick.toml
verification/tools/: canonicalize.py  capture.py  common.py  compare_event_traces.py  compare_html_reports.py  import_bhive.py  (+2 more)
web/: CNAME  deep-link.mjs  index.html  main.js  nasm-assemble.js  nasm-worker.js  pure-wasm.js  style.css  test-pure-wasm.html  uipack-cache.js
(+3325 files in other folders)
