[package]
name = "uica-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
uica-core = { path = "../uica-core" }
uica-decoder = { path = "../uica-decoder" }
uica-model = { path = "../uica-model" }

[dev-dependencies]
tempfile = "3"
