[package]
name = "uica-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"
uica-core = { path = "../uica-core", default-features = false }
uica-data = { path = "../uica-data" }
uica-decode-ir = { path = "../uica-decode-ir" }
uica-model = { path = "../uica-model" }
wasm-bindgen = "0.2"
